--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,5 +12,14 @@ jobs:
     steps:
       - name: Print a welcome message
         run: echo "Welcome to our first Github Actions Workflow!"
+
+      - name: Checkout repository
+        uses: actions/checkout@v5.0.0
+
+      - name: List repository files 
+        run: ls -la 
+        
+        
+        
         
         
