git creates a new NodeJS app

--- a/src/package.json
+++ b/src/package.json
@@ -1,10 +1,12 @@
 {
-    name: "greet-app",
-    version: "1.0.0",
-    main: "app.js",
-    scripts: {
-        test: "bash /src/test.sh"
-    },
-    dependencies: {},
     
+        "name": "greet-app",
+        "version": "1.0.0",
+        "main": "app.js",
+        "scripts": {
+            "test": "bash /src/test.sh"
+        },
+        "dependencies": {}
+    
+
 }
