--- a/.github/workflows/push-pr.yml
+++ b/.github/workflows/push-pr.yml
@@ -1,21 +1,32 @@
 on: 
-    push: 
-        branches: 
-            - main
-            - 'releases/**'
-        paths: 
-            - 'src/**' 
-    pull_request: 
-        branches: 
-            - main
-            - 'releases/**'
-jobs: 
-     test: 
-        runs-on: ubuntu-latest 
-        steps: 
-            - name: Checkout code 
-              uses: actions/checkout@v3
+  push: 
+    branches: 
+      - main
+      - 'releases/**'
+    paths: 
+      - 'src/**'
+  pull_request: 
+    branches: 
+      - main
+      - 'releases/**'
 
-            - name: Run tests 
-              run: npm test 
+jobs: 
+  test: 
+    runs-on: ubuntu-latest 
+    
+    steps: 
+      - name: Checkout code 
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'   # or your project version
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run tests
+        run: npm test
+
             
