--- a/src/package.json
+++ b/src/package.json
@@ -4,7 +4,7 @@
         "version": "1.0.0",
         "main": "app.js",
         "scripts": {
-            "test": "bash /src/test.sh"
+            "test": "bash src/test.sh"
         },
         "dependencies": {}
     
