--- a/.github/workflows/push-pr.yml
+++ b/.github/workflows/push-pr.yml
@@ -11,15 +11,26 @@ on:
       - main
       - 'releases/**'
 
-jobs: 
-  test: 
-    runs-on: ubuntu-latest 
-    
-    steps: 
-      - name: Checkout code 
+jobs:
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      - name: Install dependencies
+        run: npm install
+        working-directory: ./src
 
       - name: Run tests
         run: npm test
+        working-directory: ./src
+
 
             
