--- a/.github/workflows/push-pr.yml
+++ b/.github/workflows/push-pr.yml
@@ -19,8 +19,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Install dependencies
+        run: npm install
+        working-directory: ./src
+
       - name: Run tests
         run: npm test
+        working-directory: ./src
+
         
 
 
