--- a/.github/workflows/push-pr.yml
+++ b/.github/workflows/push-pr.yml
@@ -5,7 +5,7 @@ on:
       - main
       - 'releases/**'
     paths: 
-      - 'src/**'
+      - './src/**'
   pull_request: 
     branches: 
       - main
