--- a/.github/workflows/push-pr.yml
+++ b/.github/workflows/push-pr.yml
@@ -5,7 +5,7 @@ on:
       - main
       - 'releases/**'
     paths: 
-      -  '**' 
+      - '**'
   pull_request: 
     branches: 
       - main
@@ -17,10 +17,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Install dependencies
-        run: npm install
+        uses: actions/checkout@v
      
 
       - name: Run tests
