--- a/.github/workflows/push-pr.yml
+++ b/.github/workflows/push-pr.yml
@@ -17,7 +17,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v
+        uses: actions/checkout@v3 
      
 
       - name: Run tests
