--- a/.github/workflows/push-pr.yml
+++ b/.github/workflows/push-pr.yml
@@ -5,7 +5,7 @@ on:
       - main
       - 'releases/**'
     paths: 
-      - '**'
+      - 'src/**'
   pull_request: 
     branches: 
       - main
@@ -17,12 +17,16 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3 
-     
+        uses: actions/checkout@v3
+
+      - name: Install dependencies
+        working-directory: src
+        run: npm install
 
       - name: Run tests
+        working-directory: src
         run: npm test
-     
+
 
         
 
