--- a/.github/workflows/push-pr.yml
+++ b/.github/workflows/push-pr.yml
@@ -15,18 +15,14 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Install dependencies
-        working-directory: src
-        run: npm install
-
       - name: Run tests
-        working-directory: src
-        run: npm test
+        run: |
+          cd src
+          npm test
 
 
         
